--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nuyheshub.github.io/hwajin-web-4.0/",
   "name": "hwajin-web-4.0",
   "version": "0.1.0",
   "private": true,
@@ -6,16 +7,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "swiper": "^9.3.2",
+    "three": "^0.155.0",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
