--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nuyheshub.github.io/hwajin-web-4.0/",
+  "homepage": "http://hwajinrobotics.dothome.co.kr/",
   "name": "hwajin-web-4.0",
   "version": "0.1.0",
   "private": true,
